# soralog

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  vcpkg-configuration.json  vcpkg.json
.githooks/: README.md  activate_hooks.sh  pre-commit
.github/aux/: clang-tidy.sh  codecov.sh  filter_compile_commands.py
.github/workflows/: clang-tidy.yml  compilers.yml  coverage.yml  tests.yml
cmake/: clang-format.cmake  clang-tidy.cmake  coverage.cmake  dependencies.cmake  functions.cmake  sanitizers.cmake
cmake/Hunter/: config.cmake  init.cmake  passwords.cmake
cmake/toolchain/: compiler.cmake  cxx17.cmake  cxx20.cmake
cmake/toolchain/compiler/: clang.cmake  gcc.cmake
cmake/toolchain/flags/: sanitize_address.cmake  sanitize_leak.cmake  sanitize_memory.cmake  sanitize_thread.cmake  sanitize_undefined.cmake
example/: CMakeLists.txt
example/01-hello_world/: CMakeLists.txt  main.cpp
example/01-simple/: CMakeLists.txt  logger.yml  logging_object.cpp  logging_object.hpp  main.cpp
example/02-manual/: CMakeLists.txt  main.cpp
example/03-with_config_file/: CMakeLists.txt  logger.yml  main.cpp
example/04-cascade_config/: CMakeLists.txt  main.cpp
example/04-multi_config/: main.cpp
example/05-two_sinks/: CMakeLists.txt  main.cpp
example/06-multisink/: CMakeLists.txt  main.cpp
example/07-multisink_with_different_level/: CMakeLists.txt  main.cpp
example/08-log_rotate/: CMakeLists.txt  main.cpp
example/08-logfile/: main.cpp
example/09-logfile_rotate/: CMakeLists.txt  main.cpp
example/99-most_features/: CMakeLists.txt  logger.yml  logging_object.cpp  logging_object.hpp  main.cpp
include/soralog/: circular_buffer.hpp  common.hpp  configurator.hpp  event.hpp  group.hpp  injector.hpp  internals.hpp  level.hpp  logger.hpp  logger_factory.hpp  logger_system.hpp  logging_system.hpp  macro.hpp  sink.hpp  soralog.hpp  util.hpp
include/soralog/impl/: configurator_from_yaml.hpp  fallback_configurator.hpp  multisink.hpp  sink_to_console.hpp  sink_to_file.hpp  sink_to_nowhere.hpp  sink_to_syslog.hpp
src/: CMakeLists.txt  circular_buffer.hpp  configurator.cpp  configurator.hpp  event.hpp  group.cpp  group.hpp  log_levels.hpp  logger.cpp  logger.hpp  logger_factory.cpp  logger_factory.hpp  logger_system.cpp  logger_system.hpp  logging_system.cpp  sink.hpp  sink_types.hpp  soralog.cpp
src/impl/: configurator_from_yaml.cpp  configurator_from_yaml.hpp  fallback_configurator.cpp  multisink.cpp  sink_to_console.cpp  sink_to_console.hpp  sink_to_file.cpp  sink_to_file.hpp  sink_to_nowhere.cpp  sink_to_nowhere.hpp  sink_to_syslog.cpp
src/injector/: injector.hpp  xlog_injector.hpp
src/sink/: sink_to_console.cpp  sink_to_console.hpp  sink_to_file.cpp  sink_to_file.hpp
test/: CMakeLists.txt  README.md
test/mock/: configurator_mock.hpp  sink_mock.hpp
test/unit/: CMakeLists.txt  circular_buffer_test.cpp  group_test.cpp  logger_test.cpp  logging_system_test.cpp  macros_test.cpp  sink_to_console_test.cpp  sink_to_file_test.cpp
