#
# Copyright Soramitsu Co., 2021-2023
# Copyright Quadrivium Co., 2023
# All Rights Reserved
# SPDX-License-Identifier: Apache-2.0
#

add_subdirectory(01-hello_world)
add_subdirectory(02-manual)
add_subdirectory(03-with_config_file)
add_subdirectory(04-cascade_config)
add_subdirectory(05-two_sinks)
add_subdirectory(06-multisink)
add_subdirectory(07-multisink_with_different_level)
add_subdirectory(99-most_features)
